tests/miz/fail/parser/fail_parser_missing_semicolon_001.miz
theorem
  1 = 1
proof
end;
